--- a/WebCase/WebCase.csproj
+++ b/WebCase/WebCase.csproj
@@ -254,9 +254,9 @@
     <Content Include="Scripts\jquery-1.10.2.min.map" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\Database\Database.csproj">
+    <ProjectReference Include="..\Database\CaseDatabase.csproj">
       <Project>{8d096864-9eea-4ce7-8a2e-cdd64b1ad382}</Project>
-      <Name>Database</Name>
+      <Name>CaseDatabase</Name>
     </ProjectReference>
     <ProjectReference Include="..\WebCase.Models\WebCase.Models.csproj">
       <Project>{34ec5abd-8b11-4e45-a655-853b2f4d64a5}</Project>
