--- a/WebCase/Web.config
+++ b/WebCase/Web.config
@@ -94,4 +94,12 @@
      </customHeaders>
    </httpProtocol>
  </system.webServer>
+
+  <specFlow>
+    <unitTestProvider name="SpecRun" />
+    <plugins>
+      <add name="SpecRun" />
+    </plugins>
+  </specFlow>
+  
 </configuration>
