--- a/WebCase/packages.config
+++ b/WebCase/packages.config
@@ -29,6 +29,9 @@
   <package id="Respond" version="1.2.0" targetFramework="net461" />
   <package id="SpecFlow" version="2.2.0" targetFramework="net461" />
   <package id="SpecFlow.NUnit" version="2.2.0" targetFramework="net461" />
+  <package id="SpecRun.Runner" version="1.6.0" targetFramework="net461" />
+  <package id="SpecRun.SpecFlow" version="1.6.0" targetFramework="net461" />
+  <package id="SpecRun.SpecFlow.2-2-0" version="1.6.0" targetFramework="net461" />
   <package id="Swashbuckle" version="5.2.1" targetFramework="net461" />
   <package id="Swashbuckle.Core" version="5.2.1" targetFramework="net461" />
   <package id="WebActivatorEx" version="2.0" targetFramework="net461" />
